Setup Website using Classes

--- a/style.css
+++ b/style.css
@@ -2,8 +2,11 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  font-size: 25px;
+  line-height: 2rem;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
-body {
-  display: flex;
+#book-list {
+  border: 2px solid black;
 }
